# supersonic

./: .gitignore  AGENT.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SCVersion.txt  SYNTHDEF_LOADING.md  build.sh  bump-version.sh  clean.sh  generate-manifests.mjs  index.html  package-demo.sh  package.json  playwright.benchmark.mjs  playwright.config.mjs  publish.sh  supersonic-api-improvements.md  supersonic.d.ts  supersonic.test-d.ts  test_ugen_harness.cpp  tsconfig.typedoc.json  typedoc.json
.github/: tsan.suppressions
.github/pages/: index.html
.github/workflows/: build_windows.yml  ci.yml  debian.yml  deploy.yml  native.yml  publish.yml
HelpSource/Classes/: DoesNotUnderstandError.schelp  EnvironmentRedirect.schelp  MultiOutUGen.schelp  SimpleNumber.schelp
HelpSource/Guides/: News-3_14.schelp
assets/piano/: README.md  (+1 more)
doc/: UPSTREAM_SYNC_GUIDE.md
docs/: API.md  ARCHITECTURE.md  BROWSER_SETUP.md  BUILDING.md  CDN.md  DEBIAN-PACKAGING.md  DEPLOYMENT.md  DESIGN-pluggable-drivebelt.md  GUIDE.md  INSTALLATION.md  INSTALLATION_WEB.md  METRICS.md  METRICS_COMPONENT.md  MODES.md  OSC_API.md  QUICKSTART.md  README.dist.md  SCSYNTH_COMMAND_REFERENCE.md  SCSYNTH_DIFFERENCES.md  SERVER_COMMAND_REFERENCE.md  SYNTHDEF_LOADING.md  UPSTREAM_SYNC_GUIDE.md  WELCOME.md  WORKERS.md  scope-streams-sample-clock.md
esp32s3/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32s3/components/supersonic/: CMakeLists.txt
example/: README.md  cdn.html  demo.html  hybrid.html  load.html  mic.html  ring_buffer_test.html  ring_buffer_test.js  serve.json  server.rb  simple-cdn.html  simple.html  simple_metrics.html  synthdef.html  test_validation.html
external_libraries/: CMakeLists.txt
js/: memory_layout.js  osc_channel.js  scsynth_options.js  supersonic.js  timing_constants.js
lang/: CMakeLists.txt
patches/: juce-auhal-coreaudio.patch
rust/: Cargo.toml  deny.toml
rust/supersonic-gamepad/: Cargo.toml
rust/supersonic-gamepad/cpp/: ss_gamepad.h
rust/supersonic-gamepad/examples/: capture.rs
rust/supersonic-gamepad/src/: device.rs  ffi.rs  gc.rs  io.rs  lib.rs  schema.rs  state.rs  wasm.rs
rust/supersonic-midi/: Cargo.toml
rust/supersonic-midi/cpp/: ss_midi.h
rust/supersonic-midi/examples/: clock_capture.rs  clock_gen.rs
rust/supersonic-midi/src/: clock.rs  device.rs  ffi.rs  lib.rs  message.rs  normalize.rs  osc.rs  schema.rs  sync.rs  wasm.rs  watcher.rs
rust/supersonic-midi/tests/: clock_accuracy.rs  hotswap_watcher.rs  shared_alsa_client.rs  virtual_loopback.rs
rust/supersonic-native/: Cargo.toml
rust/supersonic-native/src/: lib.rs
rust/supersonic-osc/: Cargo.toml
rust/supersonic-osc-net/: Cargo.toml
rust/supersonic-osc-net/cpp/: ss_osc.h
rust/supersonic-osc-net/examples/: transport_probe.rs
rust/supersonic-osc-net/src/: ffi.rs  lib.rs  pipe.rs  shm.rs  stream.rs  uds.rs
rust/supersonic-osc-net/tests/: load.rs
rust/supersonic-osc/src/: ffi.rs  lib.rs  normalize.rs  osc.rs
scripts/: build-native.bat  build-native.sh  build-npm-readme.mjs  build-web.sh  build.sh  bump-version.sh  ci-debian-package.sh  ci-linux-x86.sh  clean.sh  gen-metrics-schema-header.mjs  gen-ring-fixtures.mjs  generate-manifests.mjs  get_memory_config.js  make-debian-source.sh  package-demo.sh  remark-typedoc-summary.mjs  test-all.sh  test-native.sh  test-nif.sh  test-web.sh  test_config.js
server/: CMakeLists.txt
src/: EngineClock.cpp  EngineClock.h  IngressCallCtx.h  OscIngress.h  ReplyChannel.h  SuperClock.cpp  SuperClock.h  SuperClockLean.cpp  SuperClockWasm.cpp  audio_config.h  audio_processor.cpp  audio_processor.h  buffer_commands.cpp  buffer_commands.h  clock_math.h  engine_state.h  mem_region.cpp  mem_region.h  memory_profile.h  metrics_schema.h  node_tree.cpp  node_tree.h  osc_debug.h  rt_alloc.h  shared_memory.h  shm_peer_plane.h  supersonic_config.h  supersonic_heap.cpp  supersonic_heap.h  timeline_osc.h  uuid_rewriter.cpp  uuid_rewriter.h
test/: audio_bus_channels.spec.mjs  audio_capture.spec.mjs  audio_capture_read.spec.mjs  audio_health.spec.mjs  big_bundle_fx.spec.mjs  buffer_peak_metrics.spec.mjs  buffer_pool_growth.spec.mjs  bypass_categories.spec.mjs  clock_ingress.spec.mjs  completion_message.spec.mjs  concurrent_stress.spec.mjs  config_validation.spec.mjs  debug_teardown_race.spec.mjs  debug_test.spec.mjs  engine_state.spec.mjs  envgen_exp_zero.spec.mjs  envgen_signed_shapes.spec.mjs  fixtures.mjs  flush_scheduler.spec.mjs  gamepad_wasm.html  gamepad_wasm.spec.mjs  get_tree_child_order.spec.mjs  harness.html  high_pitch_chiplead.spec.mjs  input_passthrough.spec.mjs  latency_benchmark.spec.mjs  load_sample.spec.mjs  metrics_offset_contract.spec.mjs  midi_wasm.html  midi_wasm.spec.mjs  multichannel_output.spec.mjs  next_node_id.spec.mjs  node_tree.spec.mjs  ntp_init_timeout.spec.mjs  ntp_timing_sab.spec.mjs  osc_array_parity.spec.mjs  osc_commands.spec.mjs  osc_fast.spec.mjs  osc_harness.html  osc_log.spec.mjs  (+41 more)
test/embed/: CMakeLists.txt
test/native/: CMakeLists.txt  EngineFixture.cpp  EngineFixture.h  FakeLinkPeerProcess.cpp  FakeLinkPeerProcess.h  OscTestUtils.cpp  OscTestUtils.h  RingTestUtils.h  test_aggregate_buffer_clamp.cpp  test_audio_recovery.cpp  test_audio_resume.cpp  test_benchmark.cpp  test_boot.cpp  test_buffer_advanced.cpp  test_buffer_alloc_bounds.cpp  test_bundle_sequential.cpp  test_callback_watchdog.cpp  test_callbacks.cpp  test_cold_swap.cpp  test_cold_swap_recovery.cpp  test_cold_swap_sampleloader.cpp  test_cold_swap_scope.cpp  test_completion_message.cpp  test_config_validation.cpp  test_control_bus.cpp  test_control_endpoints.cpp  test_control_plane_liveness.cpp  test_device_management.cpp  test_device_policy.cpp  test_device_selection.cpp  test_driver_switch.cpp  test_embedded_pools.cpp  test_engine_lifecycle.cpp  test_engine_state.cpp  test_error_handling.cpp  test_event_scheduler.cpp  test_fuzzy_match.cpp  test_gamepad.cpp  test_graphdef_leak.cpp  test_group_commands.cpp  (+61 more)
test/native/peer/: main.cpp
test/native/peer_shm/: main.cpp
v0.17.3/: supersonic.js
(+373 files in other folders)
